--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -1,7 +1,7 @@
 .cart-dropdown-container {
     position: absolute;
-    width: 240px;
-    height: 340px;
+    width: 300px;
+    height: 440px;
     display: flex;
     flex-direction: column;
     padding: 20px;
@@ -10,12 +10,15 @@
     top: 90px;
     right: 40px;
     z-index: 5;
-  
+    
     .cart-items {
-      height: 240px;
+      height: 340px;
       display: flex;
       flex-direction: column;
       overflow: scroll;
+      scrollbar-width: thin;
+
+      
     }
   
     button {
